Hoàn thiện tìm kiếm sản phẩm theo tên